--- a/Index.html
+++ b/Index.html
@@ -92,25 +92,36 @@
 			</nav>
 			<!-- navigation bar end -->
 		</header>
-		<div style="width: 100%;height: 90px; background: rgb(167, 163, 159); overflow: auto;">
+		<div style="width: 100%;height: 90px; background: rgb(167, 163, 159); ">
 			<img class="image-1" src="images/icon5.png" alt="icon" />
 			<div class="image-aside-text">lorem ipsum dga udfuytyfsd ydtsuaitdsf dfuy</div>
 			<div><button type="button" class="btn btn-secondary ">Download Now</button></div>
 		</div>
 
-		<div>
-			<img class="img-fluid" src="images/hbg2.png" alt="" />
-			<div
-				style="width: 120px; height:80px;background-color: chartreuse;display: inline-block;"
-			>
-				<img style="margin-left: 40%; margin-top: 20%;" src="images/video-play-btn.png" alt="" />
-				
+		<!-- <div id="image-hbg" >
+			
+		</div> -->
+
+		<div class="box">
+			<img src="images/hbg2.png" alt="" class="img-responsive" >
+			<div class="image-title">
+				<h5 class="display-8">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</h5>
+				<button class="play-btn-new" type="button">Contact a consultant</button>
 			</div>
-			<div class="image-text">fact that a reader will be distracted by
-			the readable content of a page when looking at its layout.The point of using Lorem Ipsum is that it
-			has a more-or-less.</div>
+			<div class="play-btn">
+				<i id="play" class="fa fa-play-circle"></i>
+			</div>
+			
+			
 		</div>
-		<div class="about" style="margin-top: 25px;height:600px;">
+
+
+
+
+
+
+
+		<div class="about" style="height:600px;">
 			<div style="float:left;width:500px;height:auto;margin-left:180px;">
 				<h1 style="float:left;font-size: 4em;margin-top:35px;font-weight: 400;">About Us</h1>
 
@@ -136,7 +147,7 @@
 				</p>
 
 				<button
-					style="float: left; margin-top: 20px;border-radius: 3px;font-size: 20px;background-color: rgba(141, 170, 38, 0.452);color: white;font-weight: 400;"
+					style="float: left; margin-top: 20px;border-radius: 3px;font-size: 20px;background-color: rgba(42, 187, 42, 0.925);color: white;font-weight: 400;"
 					type="button"
 				>
 					<span style="font-size: 20px;margin:10px;">Contact us now!<span>
@@ -196,12 +207,11 @@
 
 		<div class="backgr-card">
 			<div class="container">
-				<p class="backgr-card-1"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
-				dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				<p class="backgr-card-1"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 			</div>
 			<div class="container" style="margin-top: 50px;">
 				<div class="row">
-					<div class="col-6" style="height: 500px;">
+					<div class="col-6">
 						<div class="card">
 							<div class="card-body">
 								<img style="display: block;margin-left:40%;margin-bottom: 15px;" src="images/icon2.png" alt="">
@@ -367,10 +377,10 @@
 						<p id="call-us-footer">Call us today!(02)987564321</p>
 					</div>
 					<div class="col" style="margin-left: 120px;">
-						<button type="button" style="font-weight: 200;border-radius: 5px;padding:10px;text-align: center; font-size: 14px;height:60px ;border: 1px solid green;" >Book an appointment</button>
+						<button type="button" style="font-weight: 400;border-radius: 5px;padding:10px;text-align: center; font-size: 15px;height:60px ;border: 1px solid green;background-color: rgb(81, 185, 81);color: honeydew;" >Book an appointment</button>
 					</div>
 					<div class="col">
-						<button type="button" style="font-weight: 200;border-radius: 5px;padding:10px;text-align: center; font-size: 14px;height:60px ;border: 1px solid green;">Contact a consultant</button>
+						<button type="button" style="font-weight: 400;border-radius: 5px;padding:10px;text-align: center; font-size: 15px;height:60px ;border: 1px solid green;background-color: rgb(81, 185, 81);color: honeydew;">Contact a consultant</button>
 					</div>
 				</div>
 			</div>
