--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,7 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav" id="right-nav">
 						<li class="nav-item" id="call-us>">
-							<p style="margin-left:250px;padding-right: 20px; font-size: 18px;font-style: oblique;">
+							<p style="margin-left:250px;padding-right: 20px; font-size: 18px;font-style: oblique;padding-bottom: 20px;">
 								Call us today!(02)987564321
 							</p>
 						</li>
@@ -91,12 +91,21 @@
 				<!-- collapse div end   -->
 			</nav>
 			<!-- navigation bar end -->
-		</header>
-		<div style="width: 100%;height: 90px; background: rgb(167, 163, 159); ">
-			<img class="image-1" src="images/icon5.png" alt="icon" />
-			<div class="image-aside-text">lorem ipsum dga udfuytyfsd ydtsuaitdsf dfuy</div>
-			<div><button type="button" class="btn btn-secondary ">Download Now</button></div>
 		</div>
+
+		<div class="container-fluid" style="background: rgb(167, 163, 159);">
+			<div class="row">
+				<div class="col-md-4">
+					<img class="img-responsive" src="images/icon5.png" alt="icon" style="margin-left: 20%;"/>
+				</div>
+				<div class="col-md-4">
+					<p style="margin-top: 15px;">lorem ipsum dga udfuytyfsd ydtsuaitdsf dfuy</p>
+				</div>
+				<div class="col-md-4">
+					<button type="button" class="btn btn-secondary" style="margin:10px">Download Now</button>
+				</div>
+			</div>
+		</header>
 
 		<!-- <div id="image-hbg" >
 			
@@ -114,13 +123,6 @@
 			
 			
 		</div>
-
-
-
-
-
-
-
 		<div class="about" style="height:600px;">
 			<div style="float:left;width:500px;height:auto;margin-left:180px;">
 				<h1 style="float:left;font-size: 4em;margin-top:35px;font-weight: 400;">About Us</h1>
@@ -169,34 +171,34 @@
 
 			<h4 style="position: absolute; left:28%;top: 32%; font-size: 2.2em;color: whitesmoke;font-weight: 100;letter-spacing: 1.8px; margin-bottom: 35px;">step,hop or skip your way to happiness</h4>
 
-			<div class="progress-bar">
+			<div class="container" >
 				
-				<div><img src="images/tooltip-bg.png"  alt="" style="width: 70px;height: 80px;position: absolute;top: 45%;right: 75%;">
+				<div><img class="rounded" src="https://cdn.hitc-s.com/i/17/number_one_2050.gif"  alt="" style="width: 70px;height: 80px;position: absolute;top: 45%;right: 75%;">
 				<img src="images/dotted-line.png" alt="" style="width: 80px;position: absolute;top: 52%;right: 69%;">
 				</div>
 
-				<div><img src="images/tooltip-bg.png" alt=""
+				<div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNI_hAp_4X6xdkNBFwiy81PDAoxirT5F4pHWbirvrfq27KXZmn&s" alt=""
 						style="width: 70px;height: 80px;float: left;position: absolute;top: 45%;right: 63.5%;">
 					<img src="images/dotted-line.png" alt="" style="width: 80px;position: absolute;top: 52%;right: 57.5%;">
 				</div>
 
-				<div><img src="images/tooltip-bg.png" alt=""
+				<div><img src="https://nordstrand-if.no/image/13.jpeg" alt=""
 						style="width: 70px;height: 80px;float: left;position: absolute;top: 45%;right: 52%;">
 					<img src="images/dotted-line.png" alt="" style="width: 80px;position: absolute;top: 52%;right:46%;">
 				</div> 
 
-				<div><img src="images/tooltip-bg.png" alt=""
+				<div><img src="https://blognumbers.files.wordpress.com/2010/09/4.jpg" alt=""
 						style="width: 70px;height: 80px;float: left;position: absolute;top: 45%;right: 40.7%;">
 					<img src="images/dotted-line.png" alt="" style="width: 80px;position: absolute;top: 52%;right: 34.8%;">
 				</div>
 
-				 <div><img src="images/tooltip-bg.png" alt=""
+				 <div><img src="https://vignette4.wikia.nocookie.net/phobia/images/0/03/5.jpg/revision/latest?cb=20170102100251" alt=""
 						style="width: 70px;height: 80px;float: left;position: absolute;top: 45%;right: 29.5%;">
 					<img src="images/dotted-line.png" alt="" style="width: 80px;position: absolute;top: 52%;right:23.5%;">
 				</div> 
 
 				<div>
-					<img src="images/tooltip-bg.png" alt=""
+					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJUA7-EoBfXW-uRdUdYN0iDeEdV4cRaWIMrA7-n0AR8uxV-gvW&s" alt=""
 						style="width: 70px;height: 80px;float: left;position: absolute;top: 45%;right: 18%;">
 				</div>  
 			</div>
@@ -353,10 +355,18 @@
 			</div>
 		</div>
 
-		<div style="width: 100%;height: 90px; background: rgb(167, 163, 159); overflow: auto;margin-top: 35px;">
-			<img class="image-1" src="images/icon5.png" alt="icon" />
-			<div class="image-aside-text">lorem ipsum dga udfuytyfsd ydtsuaitdsf dfuy</div>
-			<div><button type="button" class="btn btn-secondary ">Download Now</button></div>
+		<div class="container-fluid" style="background: rgb(167, 163, 159);">
+			<div class="row">
+				<div class="col-md-4">
+					<img class="img-responsive" src="images/icon5.png" alt="icon" style="margin-left: 20%;" />
+				</div>
+				<div class="col-md-4">
+					<p style="margin-top: 15px;">lorem ipsum dga udfuytyfsd ydtsuaitdsf dfuy</p>
+				</div>
+				<div class="col-md-4">
+					<button type="button" class="btn btn-secondary" style="margin:10px">Download Now</button>
+				</div>
+			</div>
 		</div>
 		<!-- footer -->
 
